# libertaria-sdk

./: .gitignore  .gitmodules  AGENT.md  Containerfile.fast  Containerfile.wolfi  DECISIONS.md  DIGEST.md  HANDOFF-2026-02-05.md  ONBOARDING.md  README.md  build.zig  build.zig.broken  build.zig.zon  build_err.txt  build_error_j1.txt  l0_transport.zig  l1_identity.zig  l2_session.zig
apps/: LICENSE
capsule-core/: build.zig  build.zig.zon  build_errors.txt  verify_cli.sh
core/: LICENSE
docs/: CAPSULE_ADMIN_CLI.md  INTEGRATION.md  PHASE_1B_COMPLETION.md  PHASE_1_FOUNDATION.md  PHASE_2A_STATUS.md  PHASE_2B_COMPLETION.md  PHASE_2B_IMPLEMENTATION.md  PHASE_2C_COMPLETION.md  PHASE_2D_COMPLETION.md  PHASE_3_PQXDH.md  PHASE_4_IMPLEMENTATION.md  PROJECT_MILESTONE_50_PERCENT.md  PROJECT_STATUS.md  RFC-0014_Secure_Relay.md  RFC-0105_Sovereign_Time_Protocol.md
examples/: crypto_example.zig  lwf_example.zig
janus-sdk/: README.md
l0-transport/: README.md  dht.zig  gateway.zig  lwf.zig  mimic_dns.zig  mimic_https.zig  mimic_quic.zig  mod.zig  noise.zig  opq.zig  png.zig  quarantine.zig  relay.zig  service.zig  time.zig  transport_skins.zig  utcp.zig
l1-identity/: crypto.zig  did.zig  entropy.zig  mod.zig  pqxdh.zig  prekey.zig  proof_of_path.zig  qvl.zig  qvl_ffi.zig  slash.zig  soulkey.zig  test_pqxdh.zig  trust_graph.zig  vector.zig
membrane-agent/: Cargo.toml  README.md  build.rs
membrane-agent/src/: anomaly_alerts.rs  event_listener.rs  lib.rs  main.rs  policy_enforcer.rs  qvl_ffi.rs
membrane-agent/tests/: integration_test.rs  simulation_attack.rs
sdk/: LICENSE
(+155 files in other folders)
